[package]
name = "async-datachannel"
version = "0.2.1"
edition = "2018"
authors = ["Oliver Wangler <oliver@wngr.de>"]
description = "Async Wrapper for datachannel"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/wngr/async-datachannel"
homepage = "https://github.com/wngr/async-datachannel"
documentation = "https://docs.rs/async-datachannel"
keywords = ["webrtc", "async", "datachannel"]
categories = ["concurrency"]
readme = "README.md"

[dependencies]
anyhow = "1.0.44"
datachannel = "0.7.0"
futures = "0.3.17"
parking_lot = "0.11.2"
serde = { version = "1.0.130", optional = true, features = ["derive"] }
tokio = { version = "1.11.0", features = ["io-util", "rt", "sync"] }
tracing = "0.1.27"

[dev-dependencies]
async-tungstenite = { version = "0.15.0", features = ["tokio-openssl"] }
futures = "0.3.17"
serde_json = "1.0.68"
tokio = { version = "1.11.0", features = ["full"] }
tracing-subscriber = "0.2.22"

[features]
default = ["static", "derive"]
static = ["datachannel/static"]
derive = ["serde"]

