[package]
name = "libdatachannel_signaling_server_example"
version = "0.1.0"
authors = ["Paul-Louis Ageneau"]
edition = "2018"

[dependencies]
futures-channel = "0.3.25"
futures-util = "0.3.25"
json = "0.12.4"
tokio = { version = "1.22.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
tungstenite = "0.18.0"

