[package]
name = "async-datachannel-wasm"
version = "0.2.1"
edition = "2018"
authors = ["Oliver Wangler <oliver@wngr.de>"]
description = "Async Wrapper for WebRTC datachannel in the browser environment"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/wngr/async-datachannel"
homepage = "https://github.com/wngr/async-datachannel"
documentation = "https://docs.rs/async-datachannel-wasm"
keywords = ["webrtc", "async", "datachannel", "wasm"]
categories = ["concurrency"]
readme = "README.md"

[dependencies]
anyhow = "1.0.66"
futures = "0.3.25"
js-sys = "0.3.60"
log = "0.4.17"
send_wrapper = "0.5.0"
serde = { version = "1.0.148", features = ["derive"] }
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3.60", features = [
  "MessageEvent",
  "RtcConfiguration",
  "RtcPeerConnection",
  "RtcSignalingState",
  "RtcSdpType",
  "RtcSessionDescriptionInit",
  "RtcPeerConnectionIceEvent",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcIceServer",
  "RtcDataChannel",
  "RtcDataChannelEvent",
  "RtcDataChannelType",
] }

[dev-dependencies]
console_log = "0.2.0"
wasm-bindgen-test = "0.3.33"
